# testing-gh-pages

./: .buildinfo  .gitignore  CNAME  another-feature.html  genindex.html  hello.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  some-feature.html
.doctrees/: another-feature.doctree  environment.pickle  hello.doctree  index.doctree  some-feature.doctree
.doctrees/reference/: hello.doctree  modules.doctree
.github/workflows/: gh-pages.yml
_modules/: hello.html  index.html
_sources/: hello.ipynb  index.md
_sources/reference/: hello.rst
docs/: conf.py  hello.py  sphinx_build.sh
docs/jupyter_execute/: hello.ipynb
reference/: hello.html  modules.html
src/: hello.py
