[project]
name = "testing-gh-pages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later" # https://choosealicense.com/licenses/gpl-3.0/
dependencies = [
    "aiofiles>=25.1.0",
    "anndata>=0.10.9",
    "async-lru>=2.1.0",
    "attrs>=25.4.0",
    "bigtree[image,rich]>=1.3.1",
    "httpx>=0.28.1",
    "ijson>=3.5.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "platformdirs>=4.5.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-bio>=0.7.2",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.11.0",
    "isort>=6.1.0",
    "openapi-python-client>=0.17.3",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.13",
]
docs = [
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "jupytext>=1.19.0",
    "myst-nb>=1.3.0",
    "sphinx>=7.4.7",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-new-tab-link>=0.8.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
include_trailing_comma = true
use_parentheses = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/tutorial/#rule-selection
extend-select = ["E", "W", "F", "B"]
ignore = ["E501"]  # ignore line length for now

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]


[project.urls]
"Bug Tracker" = "https://github.com/EBI-Metagenomics/mgnipy/issues"
"Homepage" = "https://github.com/EBI-Metagenomics/mgnipy"
